conformance/1.0.0-beta/expected/errors/unclosed-nested-span-binding.cdx
<ExpectedError category=~syntax reason=~gloss-syn-unclosed-nested-span-binding/>
